syntax = "proto3";

package product_module;

// 返回的响应格式
message ProductDataResponse {
    int32 code = 1;
    string message = 2;
    repeated ProductData data = 3;
}

message ProductData {
    int32 id = 1;
    string name = 2;
}

// 获取产品请求格式
message QueryListRequest {
    int32 pageNo = 1;
    int32 pageSize = 2;
}

service ProductService {
    rpc GetList (QueryListRequest) returns (ProductDataResponse) {
    }
}
